2003-05-22  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* utils/m4/jmax.m4: added a m4 file which contains AM_JMAX_CONFIG m4 macro.
	AM_JMAX_CONFIG set the following variables:
	    - JMAX_INCLUDES: compilation flag.
	    - JMAX_LDFLAGS: link flag.
	    - JMAX_PACKAGE_DIR: path to standard package installation directory.
	
2003-20-05  Diemo Schwarz  <schwarz@ircam.fr>

	* Added fvec methods get(min|max) and get(min|max)index that
	  return the value.

	* Finished fmat methods getcol, getrow.

	* Updated help patches.

	older changes not yet logged:
	
	* class.c: Force class to be instantiated before adding message.

	* Added track_remove_event_and_upload.

	* Fixed bug in scoob_property_get_by_index: output argument atom
	  pointer was fts_atom_assign'ed (i.e. old object is released!),
	  now atom is copied.



2003-05-19  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* fts/audioconfig.c, fts/dsp.c, include/fts/dsp.h: added support for buffer size change in Audio Configuration Panel.

	* fts/dsp.c, include/fts/dsp.h: added fts_dsp_get_buffer_size, fts_dsp_set_buffer_size, fts_dsp_buffer_size_add_listener, fts_dsp_buffer_size_remove_listener functions.
	
	* packages/alsa/c/src/alsaaudioport.c: added support fior buffer size change in Audio Configuration Panel.

2003-05-16  Francois Dechelle  <dechelle@limbe.ircam.fr>

	* fixed Java bug on Windows. Now, all Java packages load OK.

2003-05-13  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* client/python/ircam/fts/client/*.py : added documentation for Python client library.

	* client/python/ircam/fts/client/FtsServerConnection.py: removed writeAtoms method.

	* client/python/ircam/fts/client/FtsPipeConnection.py: started to add a pipe connection for Python client library.
	
2003-05-09  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* client/python/ircam/fts/client/*: cleaning Python client library
	- removed Buffer.py
	- removed FtsArgs.py
	- removed FtsAtom.py