@@ -1,0 +1,4 @@
+EXTRA_DIST= \
+	data.dsp \
+	data_java.dsp \
+	data_java.mak
