@@ -1,0 +1,4 @@
+EXTRA_DIST= \
+	dsaudioport.c \
+	dsdev.c \
+	dsdev.h
