@@ -1,0 +1,4 @@
+EXTRA_DIST= \
+	guiobj.dsp \
+	guiobj_java.dsp \
+	guiobj_java.mak 
