@@ -1,0 +1,4 @@
+EXTRA_DIST= \
+	ispw.dsp \
+	ispw_java.dsp \
+	ispw_java.mak
