@@ -1,0 +1,5 @@
+EXTRA_DIST= \
+	mmio.c \
+	mmio.h \
+	wave.c \
+	wave.h 
