@@ -1,0 +1,4 @@
+EXTRA_DIST= \
+	sequence.dsp \
+	sequence_java.dsp \
+	sequence_java.mak 
