@@ -1,4 +1,4 @@
-SUBDIRS=c
+SUBDIRS=c winbuild
 
 packagedir=$(pkgdatadir)/packages/utils
 
