@@ -1,0 +1,4 @@
+EXTRA_DIST= \
+	winmidi.c \
+	winmidi.h \
+	winmidiport.c 
